--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
   <header id="title-block-header">
     <h1 style="text-align:center;" class="title">Interactivity with JavaScript and jQuery</h1>
-    <h6 style="text-align:center;">(by William Mead, Lecturer - University of California 
-    <span class="citation" data-cites="Davis">@Davis</span>)</h6>
+    <p style="text-align:center;"><small><small>(by William Mead, Lecturer - University of California 
+    <span class="citation" data-cites="Davis">@Davis</span>)</small></small></p>
   </header>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 01. jquery & javascript logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -697,18 +697,18 @@ flagging the lecture, assignment, reading, or quiz and this will inform
 us of where these issues occur. Here is the link for more information on
 how to Flag an Issue - it is also listed below.</p>
 
-<p>One of the great things about Coursera courses is that they are
-self-paced. The course dates are based on the average time it takes to
-complete a course. However, if you need additional time to complete a
-course you can reset your deadlines with no penalties.</p>
+<!-- <p>One of the great things about Coursera courses is that they are -->
+<!-- self-paced. The course dates are based on the average time it takes to -->
+<!-- complete a course. However, if you need additional time to complete a -->
+<!-- course you can reset your deadlines with no penalties.</p> -->
 
-<p>More information on resetting deadlines can be found here: Assignment Deadlines</p>
+<!-- <p>More information on resetting deadlines can be found here: Assignment Deadlines</p> -->
 
-<p>Because of the self-paced nature of Coursera courses, this is an excellent opportunity 
-to show your commitment to your work and the work of your peers through academic integrity. 
-Be sure to read the Coursera guidelines and the Coursera Honor Code here:</p>
+<!-- <p>Because of the self-paced nature of Coursera courses, this is an excellent opportunity -->
+<!-- to show your commitment to your work and the work of your peers through academic integrity. -->
+<!-- Be sure to read the Coursera guidelines and the Coursera Honor Code here:</p> -->
 
-<p><a href="">Coursera Honor Code</a></p>
+<!-- <p><a href="">Coursera Honor Code</a></p> -->
 
 <p>We look forward to having you in this course. Happy learning!</p>
 
@@ -718,14 +718,19 @@ Be sure to read the Coursera guidelines and the Coursera Honor Code here:</p>
 
 <ul>
   <li><a href="https://learner.coursera.help/hc/en-us" 
+    aria-label="Courser's Learning Support/Help Center."
     rel="noopener noreferrer" target="_blank">Coursera’s Learner Support/Help Center</a></li>
   <li><a href="https://learner.coursera.help/hc/en-us/articles/208280106-Report-a-problem-with-a-course"
+    aria-label="Flagging a Lecture."
     rel="noopener noreferrer" target="_blank">Flagging a Lecture</a></li>
   <li><a href="https://learner.coursera.help/hc/en-us/articles/208279866-Assignment-deadlines"
+    aria-label="Assignment Deadlines."
     rel="noopener noreferrer" target="_blank">Assignment Deadlines</a></li>
   <li><a href="https://learner.coursera.help/hc/en-us/sections/201895903-Peer-reviewed-assignments"
+    aria-label="Peer Reviewed Assignments."
     rel="noopener noreferrer" target="_blank">Peer Reviewed Assignments</a></li>
   <li><a href="https://learner.coursera.help/hc/en-us/articles/209818863-Coursera-Honor-Code" 
+    aria-label="Coursera's Honor Code."
     rel="noopener noreferrer" target="_blank">Coursera’s Honor Code</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -1116,7 +1121,8 @@ for storage or transmission, often carrying the extension .ZIP.</p>
 <h4>Additional Resource:</h4>
 
 <ul>
-  <li><a href="https://www.sweetwater.com/sweetcare/articles/how-to-zip-and-unzip-files/"
+  <li><a href="https://www.sweetwater.com/sweetcare/articles/how-to-zip-and-unzip-files/" 
+    aria-label="How to open a zip file for either Mac or PC/Windows."
     target="_blank" rel="noopener noreferrer">How to open a zip file for either Mac or PC</a>
   </li>
 </ul>
@@ -2860,6 +2866,7 @@ carrying the extension .ZIP.</p>
 
 <ul>
   <li><a href="https://www.sweetwater.com/sweetcare/articles/how-to-zip-and-unzip-files/" 
+    aria-label="How to open a zip file for either Mac or PC/Windows."
     target="_blank" rel="noopener noreferrer">How to open a ZIP file for either Mac or PC</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -3325,6 +3332,7 @@ lesson.</p>
 
 <ul>
   <li><a href="./pdf/2.06-jQuery-SmoothScroll.pdf" 
+    aria-label="jQuery Smooth Scroll."
     target="_blank" rel="noreferrer noopener">
     2.06 jQuery Smooth Scroll (display PDF)</a></li>
 </ul>
@@ -4948,6 +4956,7 @@ the same script, and play JavaScript.</p>
 
 <ul>
   <li><a href="./pdf/2.17-jQuery-PageLocationTracking.pdf" 
+    aria-label="2.17 jQuery Page Location Tracking (display PDF)."
     target="_blank" rel="noreferrer noopener">
     2.17 jQuery Page Location Tracking (display PDF)</a></li>
 </ul>
@@ -5070,7 +5079,7 @@ run that way.</p>
 <h3>Start Files: Smooth Scroll with JavaScript –</h3>
 
 <ul>
-  <li><a href="./zip/2.18-JS-Scroll-Effects-START.zip"
+  <li><a href="./zip/2.18-JS-Scroll-Effects-START.zip" 
     aria-label="2.18 Scroll Effects START (download ZIP)."
     target="_blank" rel="noopener noreferrer">
     2.18 JS Scroll Effects START (download ZIP)</a></li>
@@ -6382,6 +6391,7 @@ that's up to you.</p>
 
 <ul>
   <li><a href="./pdf/2.28-JS-ScrollEffects.pdf"
+    aria-label="2.28 JavaScrip Scroll Effects (display PDF)."
     target="_blank" rel="noreferrer noopener">
     2.28 JS Scroll Effects (display PDF)</a></li>
 </ul>
@@ -6631,17 +6641,15 @@ there.</p>
   alt="Overview: Overview, Download and Pricing Sections." />
 <p style="clear: both;"></p>
 
-<p>So to get that going, we're going to start adding this HTML to our
-page over here so we can go ahead and add that into our body here. Yeah,
-boom, done.</p>
+<p>So to get that going, we're going to start adding this HTML to our page over here so 
+we can go ahead and add that into our body here. Yeah, boom, done.</p>
 
-<p>So this is how this page is going to come together a lot of copy and
-paste and you just have to be careful to paste things into the correct
-place. But if you go wrong, don't worry about it at the end, I will give
-you my finished file so you could do this without going through this.
-But I think it's helpful to go through it anyway.</p>
+<p>This is how this page is going to come together a lot of copy and paste and you just 
+have to be careful to paste things into the correct place. But if you go wrong, don't 
+worry about it at the end, I will give you my finished file so you could do this without 
+going through this. But I think it's helpful to go through it anyway.</p>
 
-<ul>
+<ul style="line-height:250%">
   <li><a href="./zip/2.29-ScriptionPart1-START.zip"
     target="_blank" rel="noopener noreferrer"
     aria-label="2.29 Scription Part 1 START (download ZIP).">
@@ -6663,7 +6671,6 @@ But I think it's helpful to go through it anyway.</p>
     aria-label="2.29 Flex Slider Files (download ZIP).">
     2.29 Flex Slider Files START (download ZIP)</a></li>	
 </ul>
-
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch2-30">2.30 Header HTML (5:09)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -6675,9 +6682,9 @@ But I think it's helpful to go through it anyway.</p>
   title="2.30 Header HTML"
   alt="2.30 Header HTML." />
 
-<p>Inside the header, you're going to have a div with the logo in it and
-the H 1 for the page. It's important for pages to have a main heading
-because google pays a lot of attention to that.</p>
+<p>Inside the header, you're going to have a div with the logo in it and the H1 for the 
+page. It's important for pages to have a main heading because google pays a lot of 
+attention to that.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 369/370. header html (191) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
@@ -8713,9 +8720,11 @@ class="uri">Finished Version of the Scription Site Honor's Assignment</a>.</p>
 
 <ul>
   <li><a href="./pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
+    aria-label="2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)." 
     target="_blank" rel="noreferrer noopener">
     2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)</a></li>
   <li><a href="./pdf/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
+    aria-label="2.39 Scription Site Part 2 Interaction Challenges (display PDF)." 
     target="_blank" rel="noreferrer noopener">
     2.39 Scription Site Part 2 Interaction Challenges (display PDF)</a></li>
 </ul>
@@ -9639,10 +9648,9 @@ rules.</p>
   alt="3.09 Play the Game of Pig."
   style="width:40%" />
   
-<p>Okay, now hopefully you've taken a few minutes and jotted down some
-notes just based on the rules. If you are creating a game from scratch
-and you didn't have an example to go from of that game, that's all you
-would have. You would have to start with that.</p>
+<p>Okay, now hopefully you've taken a few minutes and jotted down some notes just based 
+on the rules. If you are creating a game from scratch and you didn't have an example to 
+go from of that game, that's all you would have. You would have to start with that.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 568. play the game of pig (281) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
@@ -9652,10 +9660,9 @@ would have. You would have to start with that.</p>
   alt="Design playing the Game of Pig."
   style="width:50%" />
   
-<p>Now, here we're a little bit lucky in that this game already exists. So
-we can actually reverse engineer it a little bit. We can actually go
-play the game and take further notes based on what we observe while
-playing the game. So I will provide a URL for this game.</p>
+<p>Now, here we're a little bit lucky in that this game already exists. So we can reverse 
+engineer it a little bit. We can actually go play the game and take further notes based 
+on what we observe while playing the game. So I will provide a URL for this game.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 569. explore the game of pig (282) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
@@ -9665,10 +9672,10 @@ playing the game. So I will provide a URL for this game.</p>
   alt="Explore the Game of Pig."
   style="width:50%" />
 
-<p>It's the cpe-web-assignments.ucdavis.edu/pig-js. So you can actually go
-to this website and play this game following the rules that I have. And
-I recommend that you do this a few times. Play the game, pick the player
-see what happens when you click the different buttons.</p>
+<p>It's the cpe-web-assignments.ucdavis.edu/pig-js. So you can actually go to this 
+website and play this game following the rules that I have. And I recommend that you 
+do this a few times. Play the game, pick the player see what happens when you click 
+the different buttons.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~ 570. inspect, JS buttons quit and roll (282) ~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
@@ -9678,33 +9685,29 @@ see what happens when you click the different buttons.</p>
   alt="Inspect JS buttons, quit and roll."
   style="width:50%" />
 
-<p>What happens if you click Quit? What happens if you click Roll the
-dice? Inspect the screen, use your inspector to inspect sort of what the
-different elements are in the screen. And see if you can reverse
-engineer of this game by just playing it a little bit and seeing what
-happens as you play the game and how it actually works.</p>
+<p>What happens if you click Quit? What happens if you click Roll the dice? Inspect the 
+screen, use your inspector to inspect sort of what the different elements are in the 
+screen. And see if you can reverse engineer of this game by just playing it a little 
+bit and seeing what happens as you play the game and how it actually works.</p>
 
-<p>Play the game a few times, spend maybe five minutes playing the game
-and right down spend five minutes writing down some items that you might
-match what notes you took earlier. What items match what you took
-earlier in your notes? What pieces of functionality can you identify?
-Really look at it and think about, okay, what's going on here? There's a
-button. What can you observe? There's a button when you click it, what
-happens? How does that happen? Use that <b>inspector</b> to see what the
-different parts of the page are. What happens in each part of those
-pages as you're playing the game. Anything else you can notice, take
-five minutes, just take five minutes and really write this out as best
-you can to think about this.</p>
+<p>Play the game a few times, spend maybe five minutes playing the game and right down 
+spend five minutes writing down some items that you might match what notes you took 
+earlier. What items match what you took earlier in your notes? What pieces of 
+functionality can you identify? Really look at it and think about, okay, what's going 
+on here? There's a button. What can you observe? There's a button when you click it, 
+what happens? How does that happen? Use that <b>inspector</b> to see what the different 
+parts of the page are. What happens in each part of those pages as you're playing the 
+game. Anything else you can notice, take five minutes, just take five minutes and really 
+write this out as best you can to think about this.</p>
 
-<p>The number one thing students tell me that are new to JavaScript and new
-to programming is that they can understand the script as we're putting
-them together and they make sense and they can read them but they don't
-know where to start. If they were to write something from scratch, they
-wouldn't even know where to begin. So really this process is to help you
-with that. We've done some other things in this specialization, such as
-the challenges which build one, upon the next, upon the next, trying to
-make you take baby steps as you move forward through the challenges to
-build something a little bit more complex.</p>
+<p>The number one thing students tell me that are new to JavaScript and new to 
+programming is that they can understand the script as we're putting them together and 
+they make sense and they can read them but they don't know where to start. If they were 
+to write something from scratch, they wouldn't even know where to begin. So really this 
+process is to help you with that. We've done some other things in this specialization, 
+such as the challenges which build one, upon the next, upon the next, trying to make 
+you take baby steps as you move forward through the challenges to build something a 
+little bit more complex.</p>
 
 <p>And now we're at a point where we're going to make a more complex script. And we 
 really need to think about, what are our strategies for doing that? Okay, so take 
@@ -11803,7 +11806,7 @@ and you'll get more practice. So I look forward to seeing you there.</p>
 
 <p>..the end…</p>
 
-<h6>Prior Update 1/30/2024 9:07pm</br>
+<p>Prior Update 1/30/2024 9:07pm</br>
 Last Updated 5/31/2024 11+am<br/>
 Last Updated 6/10/2024 10+pm<br/>
 Last Updated 6/17/2024 Mon 3+pm<br/>
@@ -11812,7 +11815,8 @@ Last Updated 7/12/2024 Fri 1+am<br/>
 Last Updated 7/18/2024 Thu 10+am<br/>
 Last Updated 9/26/2024 Thu 4+pm<br/>
 Last Updated 10/01/2024 Tue 10+pm<br/>
-Last Updated 10/13/2024 Sun 10+pm</h6>
+Last Updated 10/13/2024 Sun 10+pm<br/>
+Last Updated 11/18/2024 Mon 10+am</p>
 
 </body>
 </html>
