--- a/index.html
+++ b/index.html
@@ -361,14 +361,14 @@ when using jQuery plugins. You will be introduced to the Flexslider
 jQuery plugin and be able to use it to build basic and more advanced
 image sliders.</p>
 
-<h5>13 videos, 3 readings, 2 zip files</h5>
+<h5><small>13 videos, 3 readings, 2 zip files</small></h5>
 
-<ul>
+<ul style="line-height:250%">
   <li>1.00 A Note from UC Davis</li>
   <li>1.00 Welcome to this Course!</li>
 </ul>
 
-<ol type="1">
+<ol type="1" style="line-height:250%">
   <li>Module Introduction</li>
   <li>Introduction to jQuery Plugins</li>
   <li>Using Plugins and Essential Steps</li>
@@ -390,7 +390,7 @@ image sliders.</p>
     1.04 FlexSlider Plugin (download ZIP)</a></li>
 </ul>
 
-<ol start="5" type="1">
+<ol start="5" type="1" style="line-height:250%">
   <li>FlexSlider: A jQuery Plugin</li>
   <li>About the Minified Version</li>
   <li>Adding Markup &amp; Hooking Up the Slider</li>
@@ -425,7 +425,7 @@ series of challenges.</p>
 
 <h5>39 videos, 5 readings, 7 zip files</h5>
 
-<ol type="1">
+<ol type="1" style="line-height:250%">
   <li>Module 2 Introduction (:38)</li>
   <li>Introduction to Smooth Scroll with jQuery (4:15)</li>
 </ol>
@@ -437,7 +437,7 @@ series of challenges.</p>
     2.02 jQuery Scroll Effects START (download ZIP)</a></li>
 </ul>
 
-<ol type="1" start="3">
+<ol type="1" start="3" style="line-height:250%">
   <li>Creating a Click Handler (5:00)</li>
   <li>Adding the Animation (6:56)</li>
   <li>Add Some Easing and a Callback Function (4:05)</li>
@@ -451,7 +451,7 @@ series of challenges.</p>
     2.06 jQuery Smoother Scroll Effects (display PDF)</a></li>
 </ul>
 
-<ol start="7" type="1">
+<ol start="7" type="1" style="line-height:250%">
   <li>Introduction to Page Location Tracking (8:00)</li>
   <li>The Crux of the Problem (6:09)</li>
   <li>Strategy (8:27)</li>
@@ -484,7 +484,7 @@ series of challenges.</p>
     2.18 JS Scroll Effects START (download ZIP)</a></li>
 </ul>
 
-<ol start="19" type="1">
+<ol start="19" type="1" style="line-height:250%">
   <li>Getting the Target - Part 1 (4:50)</li>
   <li>Getting the Target - Part 2 (5:15)</li>
   <li>Smooth Scroll Polyfill (4:45)</li>
@@ -527,7 +527,7 @@ series of challenges.</p>
 	2.29 Scription Part 2 Snippets (download ZIP)</a></li>
 </ul>
 
-<ol start="30" type="1">
+<ol start="30" type="1" style="line-height:250%">
   <li>Header HTML (5:09)</li>
   <li>Pricing HTML</li>
   <li>Beginning Styling</li>
@@ -563,7 +563,7 @@ problem down into smaller pieces.</p>
 
 <h5>11 videos, 4 readings</h5>
 
-<ol type="1" start="1">
+<ol type="1" start="1" style="line-height:250%">
   <li>Module Introduction</li>
   <li>Introduction to Objects and Data in JS</li>
 </ol>
@@ -575,7 +575,7 @@ problem down into smaller pieces.</p>
     3.02 JS Objects START (download ZIP)</a></li>
 </ul>
 
-<ol start="3" type="1">
+<ol start="3" type="1" style="line-height:250%">
   <li>Objects Can Contain Arrays and Other Objects</li>
   <li>Functions Inside Objects Equals Methods</li>
   <li>Putting Objects and Functions Together</li>
@@ -601,7 +601,7 @@ problem down into smaller pieces.</p>
     3.08 Pig Dice Game Diagrams (display PNG)</a></li>
 </ul>
 
-<ol start="9" type="1">
+<ol start="9" type="1" style="line-height:250%">
   <li>Play the Game of Pig</li>
   <li>Version One</li>
   <li>Other Versions</li>
@@ -625,7 +625,7 @@ script in many creative ways.</p>
 
 <p><small><small>15 videos, 2 readings</small></small></p>
 
-<ol type="1" start="1">
+<ol type="1" start="1" style="line-height:250%">
   <li>Module Introduction</li>
   <li>Intro to the Game of Pig</li>
 </ol>
@@ -637,7 +637,7 @@ script in many creative ways.</p>
     4.02 Game of Pig START (download ZIP)</a></li>
 </ul>
 
-<ol start="3" type="1">
+<ol start="3" type="1" style="line-height:250%">
   <li>Start the Game</li>
   <li>Set Up the Turn</li>
   <li>Throwing the Dice</li>
@@ -716,7 +716,7 @@ how to Flag an Issue - it is also listed below.</p>
 
 <h4>Additional Links:</h4>
 
-<ul>
+<ul style="line-height:250%">
   <li><a href="https://learner.coursera.help/hc/en-us" 
     aria-label="Courser's Learning Support/Help Center."
     rel="noopener noreferrer" target="_blank">Coursera’s Learner Support/Help Center</a></li>
@@ -1105,7 +1105,7 @@ for storage or transmission, often carrying the extension .ZIP.</p>
 
 <h4 id="ch1-04-zip">jQuery FlexSlider Plugins START (download ZIPs)</h4>
 
-<ul>
+<ul style="line-height:250%">
   <li><a href="./zip/1.04-FlexSliderBasic-START.zip" 
     aria-label="1.04 Flex Slider Basic START (download ZIP)."
     target="_blank" rel="noopener noreferrer">
@@ -8718,7 +8718,7 @@ class="uri">Finished Version of the Scription Site Honor's Assignment</a>.</p>
 
 <h2>Scription Site Parts 1 &amp; 2</h2>
 
-<ul>
+<ul style="line-height:250%">
   <li><a href="./pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
     aria-label="2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)." 
     target="_blank" rel="noreferrer noopener">
